<resources>
    <string name="app_name">My_HRAC</string>
    <string name="nav_home">Home</string>
    <string name="nav_bookv">BookView</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_add">Attendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
